--- a/home/home.css
+++ b/home/home.css
@@ -749,6 +749,7 @@ li {
     margin-right: auto;
     width: 500px;
     height: 400px;
+    
 }
 
 .quote__item .desc {
@@ -802,8 +803,9 @@ li {
 }
 
 .team__image {
-    width: 600px;
-    heigth: 500px
+    
+    padding-left:0;
+    
 }
 
 .team__list {
@@ -819,20 +821,21 @@ li {
 }
 
 .team__info {
-    background-color: #e70c0c;
+    
     padding: 3.5rem 4.5rem 2.5rem;
     text-align: center;
     position: absolute;
-    top: 0;
-    bottom: 100%;
-    left: 3rem;
+    top: 60%;
+    bottom: 0%;
+    left: 10rem;
     right: 3rem;
-    transform: translateY(70%); // translate block info
+    transform: translateY(70%); 
     transition: transform 0.2s linear;
+    background-color: #e5f5fc;
 }
 
 .team__name {
-    font-family: var(--secondary-font);
+    font-family: auto;
     font-size: 2.2rem;
     margin-bottom: 1rem;
 }
@@ -840,14 +843,13 @@ li {
 .team__job {
     font-size: 1.5rem;
     font-weight: 300;
-    color: var(--gray-light);
+    color: auto;
 }
 
 .team__social {
     margin-top: 3rem;
     display: flex;
     justify-content: center;
-    // ẩn social
     opacity: 0;
     visibility: hidden;
     transition: 0.2s linear;
@@ -896,11 +898,7 @@ li {
         visibility: visible;
     }
 
-    .team__info {
-        bottom: 3rem;
-        transform: translateY(0);
-    }
-
+   
     .team__item {
         width: 100%;
         margin-bottom: 3rem;
@@ -926,15 +924,20 @@ li {
 }
 
 .booking__image img {
-    width: 100%;
-    height: 100%;
+    width: 110%;
+    height: 120%;
     object-fit: cover;
 }
 
 .booking__form {
-    padding: 10rem;
+    padding-top: 10rem;
     width: 60%;
-    background-color: beige;
+    
+    padding-right: 10%;
+    padding-bottom:10rem;
+
+    
+    
 }
 
 .booking__form input,
