--- a/home/home.css
+++ b/home/home.css
@@ -2,13 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: content-box;
-    
-
 }
-.heading__title1{
+
+.heading__title1 {
     text-align: center;
     font-size: 50px;
-    color:#0052b2;
+    color: #0052b2;
 }
 
 body {
@@ -417,7 +416,6 @@ li {
     margin-left: 12%;
     position: relative;
     z-index: 2;
-
 }
 
 .menu__list {
@@ -447,7 +445,6 @@ li {
     position: relative;
     max-width: 55.5rem;
     z-index: 2;
-
 }
 
 .header__content-slogan {
@@ -467,7 +464,6 @@ li {
     font-weight: bold;
     margin-bottom: 3rem;
     line-height: 1.2;
-
 }
 
 .header__content-desc {
@@ -671,7 +667,6 @@ li {
     background-color: #0052b2;
 }
 
-
 .popular__list {
     display: flex;
     flex-wrap: wrap;
@@ -688,14 +683,9 @@ li {
     display: block;
     padding: 2rem 2rem 4.5rem;
     text-align: center;
-    box-shadow:10px 10px 5px rgb(217, 173, 230);
-    
-    background-color: pink ;
-    
-}
+    box-shadow: 10px 10px 5px rgb(217, 173, 230);
 
-.popular__link .btn--secondary {
-    transition: background-color 0.2s linear; // TRANSITION BACKGROUND
+    background-color: #e5f5fc;
 }
 
 .popular__link img {
@@ -721,22 +711,11 @@ li {
 
 .popular__link:hover {
     box-shadow: 0 0 14px 14px rgba(0, 0, 0, 0.025);
-    BOX SHADOW
-}
-
-
-
-@media screen and (max-width: 767px) {
-    .popular__item {
-        width: 100%;
-        margin-bottom: 2.5rem;
-    }
 }
 
 .quote {
     padding-top: 10rem;
     padding-bottom: 14rem;
-    background-color: var(--bg-block);
 }
 
 .quote__item {
@@ -749,7 +728,6 @@ li {
     margin-right: auto;
     width: 500px;
     height: 400px;
-    
 }
 
 .quote__item .desc {
@@ -795,7 +773,6 @@ li {
     background-color: #ff817e;
 }
 
-
 .team {
     padding-top: 14rem;
     padding-bottom: 20rem;
@@ -803,9 +780,8 @@ li {
 }
 
 .team__image {
-    
-    padding-left:0;
-    
+
+    padding-left: 0;
 }
 
 .team__list {
@@ -817,11 +793,10 @@ li {
 .team__item {
     width: calc(33.33% - 2rem);
     position: relative;
-
 }
 
 .team__info {
-    
+
     padding: 3.5rem 4.5rem 2.5rem;
     text-align: center;
     position: absolute;
@@ -829,7 +804,7 @@ li {
     bottom: 0%;
     left: 10rem;
     right: 3rem;
-    transform: translateY(70%); 
+    transform: translateY(70%);
     transition: transform 0.2s linear;
     background-color: #e5f5fc;
 }
@@ -875,13 +850,6 @@ li {
     transition: 0.2s linear;
 }
 
-// sự kiện :hover ở đây
-.team__social a:hover {
-    color: white;
-    background-color: var(--primary-color);
-    border-color: var(--primary-color);
-}
-
 .team__item:hover .team__info {
     transform: translateY(25%);
     box-shadow: 0 4px 4px 4px rgba(0, 0, 0, 0.025);
@@ -898,7 +866,6 @@ li {
         visibility: visible;
     }
 
-   
     .team__item {
         width: 100%;
         margin-bottom: 3rem;
@@ -932,12 +899,9 @@ li {
 .booking__form {
     padding-top: 10rem;
     width: 60%;
-    
-    padding-right: 10%;
-    padding-bottom:10rem;
 
-    
-    
+    padding-right: 10%;
+    padding-bottom: 10rem;
 }
 
 .booking__form input,
@@ -952,17 +916,7 @@ li {
     width: 100%;
     border-radius: 0;
     outline: none;
-    -webkit-appearance: none;
-    font-family: var(--primary-font);
-}
-
-// ẩn mũi tên mặc định
-.booking__form input::-webkit-inner-spin-button,
-.booking__form input::-webkit-outer-spin-button,
-.booking__form select::-webkit-inner-spin-button,
-.booking__form select::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+    font-family: var();
 }
 
 .booking .form-group {
@@ -972,26 +926,8 @@ li {
     margin-bottom: 2.5rem;
 }
 
-// set width 50%-1rem của các phần tử trong form-group
-.booking .form-group .custom-input,
-.booking .form-group input,
-.booking .form-group select {
-    width: calc(50% - 1rem);
-}
-
 .booking .form-group .custom-input {
     position: relative;
-}
-
-// set riêng input cho custom-input
-.booking .form-group .custom-input input {
-    width: 100%;
-}
-
-// ẩn mũi tên cho input date
-.booking .form-group .custom-input input::-webkit-calendar-picker-indicator {
-    -webkit-appearance: none;
-    display: none;
 }
 
 .booking .form-group .custom-input i {
@@ -1030,4 +966,31 @@ li {
     color: var(--gray-light);
     margin-top: 3.5rem;
     font-size: 1.2rem;
+}
+
+@keyframes blink {
+    0% {
+        color: #f9f5f5;
+        /* Màu văn bản khi không nhấp nháy */
+    }
+
+    50% {
+        color: #0052b2;
+        /* Màu văn bản khi nhấp nháy */
+    }
+
+    100% {
+        color: #fcfcfc;
+        /* Màu văn bản khi không nhấp nháy */
+    }
+}
+
+.header__content-title {
+    animation: blink 3s infinite;
+    /* Thời gian nhấp nháy và lặp vô hạn */
+}
+
+.header__content-title br {
+    display: none;
+    /* Ẩn các thẻ <br> để văn bản xuất hiện liền mạch */
 }
